@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -74,7 +74,6 @@ public class ToolchainPlugin implements Plugin<Project> {
 
 	private void configureTestToolchain(Project project, ToolchainExtension toolchain) {
 		List<String> jvmArgs = new ArrayList<>();
-		jvmArgs.add("--illegal-access=warn");
 		jvmArgs.addAll(toolchain.getTestJvmArgs().getOrElse(Collections.emptyList()));
 		project.getTasks().withType(Test.class, (test) -> test.jvmArgs(jvmArgs));
 	}
